@@ -148,6 +148,8 @@ AC_CONFIG_FILES([Makefile
                  doc/VCMakefile
                  examples/Makefile
                  examples/VCMakefile
+                 examples/fio/Makefile
+                 examples/fio/VCMakefile
                  fio/Makefile
                  fio/VCMakefile
                  src/Makefile
@@ -160,7 +162,8 @@ AC_CONFIG_FILES([Makefile
                  test/testHepMCIteration.cc
                  test/testMultipleCopies.cc
                  test/testStreamIO.cc
-                 examples/GNUmakefile.example])
+                 examples/GNUmakefile.example
+                 examples/fio/GNUmakefile.example])
 
 AC_CONFIG_FILES([test/testHepMC.sh], [chmod +x test/testHepMC.sh])
 AC_CONFIG_FILES([test/testFlow.sh], [chmod +x test/testFlow.sh])
