@@ -10,7 +10,9 @@
 
 #include <iostream>
 
+#include "VectorConversion.h"
 #include "HepMC/GenEvent.h"
+#include "CLHEP/Vector/LorentzVector.h"
 
 // in this example we use the HepMC namespace, so that we do not have to 
 // precede all HepMC classes with HepMC::
@@ -18,6 +20,7 @@
 // This example also shows how to use the CLHEP Lorentz vector with HepMC2
 
 using namespace HepMC;
+using namespace CLHEP;
 
 int main() {
     //
@@ -47,6 +50,8 @@ int main() {
 
     // First create the event container, with Signal Process 20, event number 1
     //
+    // Note that the HepLorentzVectors will be automatically converted to 
+    // HepMC::FourVector within GenParticle and GenVertex
     GenEvent* evt = new GenEvent( 20, 1 );
     // define the units
     evt->use_units(HepMC::Units::GEV, HepMC::Units::MM);
@@ -54,19 +59,19 @@ int main() {
     // create vertex 1 and vertex 2, together with their inparticles
     GenVertex* v1 = new GenVertex();
     evt->add_vertex( v1 );
-    v1->add_particle_in( new GenParticle( FourVector(0,0,7000,7000),
+    v1->add_particle_in( new GenParticle( HepLorentzVector(0,0,7000,7000),
 				       2212, 3 ) );
     GenVertex* v2 = new GenVertex();
     evt->add_vertex( v2 );
-    v2->add_particle_in( new GenParticle( FourVector(0,0,-7000,7000),
+    v2->add_particle_in( new GenParticle( HepLorentzVector(0,0,-7000,7000),
 				       2212, 3 ) );
     //
     // create the outgoing particles of v1 and v2
     GenParticle* p3 = 
-	new GenParticle( FourVector(.750,-1.569,32.191,32.238), 1, 3 );
+	new GenParticle( HepLorentzVector(.750,-1.569,32.191,32.238), 1, 3 );
     v1->add_particle_out( p3 );
     GenParticle* p4 = 
-	new GenParticle( FourVector(-3.047,-19.,-54.629,57.920), -2, 3 );
+	new GenParticle( HepLorentzVector(-3.047,-19.,-54.629,57.920), -2, 3 );
     v2->add_particle_out( p4 );
     //
     // create v3
@@ -75,27 +80,41 @@ int main() {
     v3->add_particle_in( p3 );
     v3->add_particle_in( p4 );
     v3->add_particle_out( 
-	new GenParticle( FourVector(-3.813,0.113,-1.833,4.233 ), 22, 1 )
+	new GenParticle( HepLorentzVector(-3.813,0.113,-1.833,4.233 ), 22, 1 )
 	);
     GenParticle* p5 = 
-	new GenParticle( FourVector(1.517,-20.68,-20.605,85.925), -24,3);
+	new GenParticle( HepLorentzVector(1.517,-20.68,-20.605,85.925), -24,3);
     v3->add_particle_out( p5 );
     //
     // create v4
-    GenVertex* v4 = new GenVertex(FourVector(0.12,-0.3,0.05,0.004));
+    GenVertex* v4 = new GenVertex(HepLorentzVector(0.12,-0.3,0.05,0.004));
     evt->add_vertex( v4 );
     v4->add_particle_in( p5 );
     v4->add_particle_out( 
-	new GenParticle( FourVector(-2.445,28.816,6.082,29.552), 1,1 )
+	new GenParticle( HepLorentzVector(-2.445,28.816,6.082,29.552), 1,1 )
 	);
     v4->add_particle_out( 
-	new GenParticle( FourVector(3.962,-49.498,-26.687,56.373), -2,1 )
+	new GenParticle( HepLorentzVector(3.962,-49.498,-26.687,56.373), -2,1 )
 	);
     //    
     // tell the event which vertex is the signal process vertex
     evt->set_signal_process_vertex( v3 );
     // the event is complete, we now print it out to the screen
     evt->print();
+    
+    // example conversion back to Lorentz vector
+    // add all outgoing momenta
+    std::cout << std::endl;
+    std::cout << " Add output momenta " << std::endl;
+    HepLorentzVector sum;
+    for ( GenEvent::particle_const_iterator p = evt->particles_begin(); 
+	      p != evt->particles_end(); ++p ){
+	if( (*p)->status() == 1 ) {
+	    sum += convertTo( (*p)->momentum() );
+	    (*p)->print();
+	}
+    }
+    std::cout << "Vector Sum: " << sum << std::endl;
 
     // now clean-up by deleteing all objects from memory
     //
